<resources>
    <string name="app_name">COVINFO</string>
    <string name="botonPPrincipal">Pulsa para continuar</string>
    <string name="textoPPrincipal">Aplicación libre de COVID</string>
    <string name="btninfo">Última información sobre COVID-19</string>
    <string name="btnrecomendaciones">Recomendaciones</string>
    <string name="btntest">Test COVID-19</string>
    <string name="btnEstadisticas">Estadísticas mundiales</string>
    <string name="EstadisticasMundiales">Estadísticas mundiales</string>
    <string name="testCovidInicio1">Este test está diseñado para ayudarte a tomar la mejor decisión en caso de que tengas síntomas o dudas acerca del COVID-19</string>
    <string name="testCovidInicio2">Durante el test no se recogerá ningún dato, y el resultado es estrictamente personal y confidencial</string>
    <string name="comenzarTest">Comenzar Test</string>
    <string name="tituloTest">Test COVID-19</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="P1_1">¿Tienes ALGUNO de los síntomas habituales de la enfermedad?</string>
    <string name="P1_2">Los síntomas habituales son tos, fiebre superior a 38ºC o dificultad para respirar</string>
    <string name="P1_3">En algunos casos también puede haber disminución del gusto y del olfato, dolores musculares, diarrea, dolor torácico o de cabeza.</string>
    <string name="P2">¿Has estado en contacto con alguna persona enferma con COVID-19?</string>
    <string name="P3">¿Te cuesta respirar?</string>
    <string name="repetirTest">Repetir test</string>
    <string name="menuPrincipal">Menú Principal</string>
    <string name="quedateCasa">¡Quédate en casa!</string>
    <string name="llamarHospital">Llama al hospital para hablar con un médico</string>
    <string name="respirarSOS">Si la dificultad es importante llama al 112</string>
    <string name="fecha">Selecciona la fecha:</string>
    <string name="temperatura">Introduce tu temperatura:</string>
    <string name="btnAñadir">Añadir Datos</string>
    <string name="btnModificar">Modificar Datos</string>
    <string name="btnMostrar">Mostrar Datos</string>
    <string name="btnEliminar">Eliminar Datos</string>
    <string name="btnGrafica">Gráfica Datos</string>
    <string name="btnEnviarDatos">Enviar Datos</string>
    <string name="btnBBDD">Base de Datos</string>
    <string name="txtdni">Introduce tu DNI: </string>
    <string name="txttemperatura">Introduce tu temperatura actual: </string>
    <string name="txtfecha">Introduce la fecha de la medición: (año/mes/dia) </string>
    <string name="txtsint1">Introduce tu sintoma1: </string>
    <string name="txtsint2">Introduce tu sintoma2: </string>
    <string name="txtotros">Introduce otros síntomas: </string>
    <string name="txtnombre">Introduce tu nombre: </string>
    <string name="txtapellidos">Introduce tus apellidos: </string>
    <string name="txttarjetasanitaria">Introduce el número de la tarjeta sanitaria: </string>
    <string name="txtedad">Introduce tu edad: </string>
    <string name="btnVolver">Volver</string>
    <string name="datosExtraidos">Los datos extraídos de la bbdd:</string>
    <string name="errorBDVacia">Error Base de Datos vacía</string>
    <string name="datos">DATOS</string>
    <string name="usuarios">USUARIOS</string>
    <string name="centroMedico">CENTRO MÉDICO</string>
    <string name="title_activity_mostrar_datos_usuario">mostrarDatosUsuario</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="fechaPCR">Fecha PCR</string>
    <string name="otrosSintomas">Introduce otros síntomas:</string>
    <string name="dolorCabeza">Dolor de cabeza</string>
    <string name="difRespiratoria">Dificultad respirar</string>
    <string name="mejoria">Mejoría:</string>
    <string name="PRCpos">PCR Positiva:</string>
    <string name="cansancio">Cansancio</string>
    <string name="contactoPos">Contacto con Positivo:</string>
    <string name="seleccionarSintomas">Selecciona los síntomas que tengas:</string>
    <string name="perdidaGusto">Pérdida olfato</string>
    <string name="perdidaOlfato">Pérdida gusto</string>

    <string name="centroMedico2">Centro Médico:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="nombreMedico">Médico:</string>
    <string name="telefonoMedico">Teléfono del médico:</string>
    <string name="emailMedico">Email del médico:</string>

    <string name="modificar">Modificar</string>
    <string name="volver">Volver</string>
    <string name="anadirUsu">Añadir Usuario</string>

    <string name="dni">Introduce el DNI:</string>
    <string name="nombre">Introduce el nombre:</string>
    <string name="apellido">Introduce los apellidos:</string>
    <string name="tarjetaSanitaria">Introduce la tarjeta sanitaria:</string>
    <string name="fechaNacimiento">Introduce la fecha de nacimiento:</string>
    <string name="medicamentosHabituales">Medicamentos habituales:</string>
    <string name="seleccionaUsuario">Selecciona Usuario:</string>
    <string name="temperatura2">Temperatura</string>
    <string name="btnDatos">Datos</string>
    <string name="btnGrafica2">Graficas</string>
    <string name="gestionDatos">Gestion Datos</string>
    <string name="testCOVID">Test COVID</string>
    <string name="estadisticasMun">Estadisticas mundiales</string>
    <string name="recomendaciones">Recomendaciones</string>

    <string name="fechaFija">Fecha:</string>
    <string name="temperaturaFija">Temperatura:</string>
    <string name="PCRPosFija">PCR Positiva:</string>
    <string name="cabeceraEmail">|   DNI    |   Fecha    | Temperatura | Dolor Cabeza | Cansancio | Cuesta respirar | Pérdida Gusto | Pérdida Olfato | Mejoría | Contacto con Positivo | PCR Pos | Otros Síntomas |</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_mostrar_usuarios">MostrarUsuarios</string>
    <string name="title_activity_menubbddfinal">menubbddfinal</string>

</resources>