<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AnadirDatosbbdd">

    <TextView
        android:id="@+id/textViewDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtdni" />

    <EditText
        android:id="@+id/edtDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textViewTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txttemperatura" />

    <EditText
        android:id="@+id/edtTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtfecha" />

    <EditText
        android:id="@+id/edtFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textViewSint1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtsint1" />

    <EditText
        android:id="@+id/edtSint1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewSint2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtsint2" />

    <EditText
        android:id="@+id/edtSint2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewOtros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtotros" />

    <EditText
        android:id="@+id/edtOtros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonAñadirDatosBBDD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAñadir" />
</LinearLayout>