<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".test_covid_casa">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:srcCompat="@drawable/enfermo4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        android:elegantTextHeight="true"
        android:typeface="serif"
        android:gravity="center"
        android:text="@string/quedateCasa" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:elegantTextHeight="true"
        android:typeface="serif"
        android:gravity="center"
        android:text="@string/llamarHospital" />

    <Button
        android:id="@+id/buttonRepetirTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/repetirTest" />

    <Button
        android:id="@+id/buttonMenuPrincipal"
        android:layout_width="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content"
        android:text="@string/menuPrincipal" />
</LinearLayout>