<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AnadirDatosUsuario">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="685dp"
        android:text="@string/txtdni" />

    <EditText
        android:id="@+id/edtanadirDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="135dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="673dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="251dp"
        android:layout_marginBottom="633dp"
        android:text="@string/fecha" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="232dp"
        android:layout_marginBottom="589dp"
        android:text="@string/temperatura" />

    <EditText
        android:id="@+id/edtFechaAnadir"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="624dp"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="546dp"
        android:text="@string/seleccionarSintomas" />

    <CheckBox
        android:id="@+id/chkCabeza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="482dp"
        android:text="@string/dolorCabeza" />

    <CheckBox
        android:id="@+id/chkRespirar"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="482dp"
        android:text="@string/difRespiratoria" />

    <CheckBox
        android:id="@+id/chkCansacio"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="258dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="482dp"
        android:text="@string/cansancio" />

    <CheckBox
        android:id="@+id/chkOlfato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="424dp"
        android:text="@string/perdidaGusto" />

    <Switch
        android:id="@+id/swContactoPos"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="391dp"
        android:layout_marginEnd="238dp"
        android:layout_marginBottom="279dp"
        android:text="@string/contactoPos" />

    <Switch
        android:id="@+id/swPCR"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="455dp"
        android:layout_marginEnd="239dp"
        android:layout_marginBottom="231dp"
        android:text="@string/PRCpos" />

    <EditText
        android:id="@+id/edtFechaPCR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="192dp"
        android:layout_marginTop="455dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="231dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/fechaPCR" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="527dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="185dp"
        android:text="@string/otrosSintomas" />

    <EditText
        android:id="@+id/edtOtrosSintomas"
        android:layout_width="335dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="105dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <Button
        android:id="@+id/btnAnadirDatos1"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="137dp"
        android:layout_marginTop="638dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="35dp"
        android:text="@string/btnAñadir" />

    <EditText
        android:id="@+id/edtTempUser"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="206dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="579dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <Switch
        android:id="@+id/swMejoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="341dp"
        android:layout_marginEnd="238dp"
        android:layout_marginBottom="348dp"
        android:text="@string/mejoria" />

    <CheckBox
        android:id="@+id/chkGusto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="214dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="423dp"
        android:text="@string/perdidaOlfato" />
</RelativeLayout>